fix: Block place/break